0.5.7 (vertical align fix3, label links fix)

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -30,10 +30,10 @@
 	   padding: 0 7% ($base-unit) 7% !important; /* 40px = 5% everywhere, now 7% */
 	}
 	.main {
-	   padding: 0 7% ($base-unit) 0 !important;
+	   padding: 0 7% ($base-unit * 3) 0 !important;
 	}
 	.main-with-margin {
-	   padding: 0 7% ($base-unit) 7% !important;
+	   padding: 0 7% ($base-unit * 3) 7% !important;
 	}
 	.only-main {
 	   padding: ($base-unit) 7% !important;
@@ -67,6 +67,79 @@
 	}
 }
 
+
+/* main */
+
+
+.inner-wrap-column { 
+  display: flex;
+  flex-wrap: wrap;
+  padding: ($base-unit * 2) 0;
+}
+.main {   
+  flex: 70%;
+  padding: ($base-unit) ($base-unit) 0 0;
+}
+.main-with-margin {   
+  flex: 70%;
+  padding: ($base-unit) ($base-unit * 2) ($base-unit) ($base-unit * 5);
+}
+.side {
+  flex: 30%;
+  padding: ($base-unit) ($base-unit * 2);
+}
+.only-main {
+  flex: 100%;
+  padding: ($base-unit) 0;
+  margin: ($base-unit) ($base-unit * 5);
+  margin-top: 0;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.only-main-top {
+  flex: 100%;
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.post-list-heading {
+  margin-left: ($base-unit * 5);
+}
+
+.post-list {
+  margin-left: 0;
+  list-style: none;
+
+  > li {
+    /* padding-top: $base-unit; */
+    margin-bottom: $base-unit * 2;
+	padding-bottom: $base-unit;
+	padding-left: ($base-unit * 5);
+	/*padding-right: 2%;
+	margin-right: -2%;*/
+	border-bottom: 1px solid $background-gray; 
+  }
+  
+  /*> li:first-child {
+    margin-top: -20px;
+  }
+  
+  > li:hover { box-shadow: 1px -1px $background-gray, 1px 0 $background-gray, 0 -1px $background-gray; }*/
+}
+
+
+/* for translations  */
+
+/*.visited a::before:visited {
+  content: '- ';
+}*/
+
+.with-indent {
+  text-indent: 5%;
+}
 
 
 /* header */
@@ -198,84 +271,11 @@
 }
 
 
-/* main */
-
-
-.inner-wrap-column { 
-  display: flex;
-  flex-wrap: wrap;
-  padding: ($base-unit * 2) 0;
-}
-.main {   
-  flex: 70%;
-  padding: ($base-unit) ($base-unit) ($base-unit) 0;
-}
-.main-with-margin {   
-  flex: 70%;
-  padding: ($base-unit) ($base-unit * 2) ($base-unit) ($base-unit * 5);
-}
-.side {
-  flex: 30%;
-  padding: ($base-unit) ($base-unit * 2);
-}
-.only-main {
-  flex: 100%;
-  padding: ($base-unit) 0;
-  margin: ($base-unit) ($base-unit * 5);
-  margin-top: 0;
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.only-main-top {
-  flex: 100%;
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-
-.post-list-heading {
-  margin-left: ($base-unit * 5);
-}
-
-.post-list {
-  margin-left: 0;
-  list-style: none;
-
-  > li {
-    /* padding-top: $base-unit; */
-    margin-bottom: $base-unit * 2;
-	padding-bottom: $base-unit;
-	padding-left: ($base-unit * 5);
-	/*padding-right: 2%;
-	margin-right: -2%;*/
-	border-bottom: 1px solid $background-gray; 
-  }
-  
-  /*> li:first-child {
-    margin-top: -20px;
-  }
-  
-  > li:hover { box-shadow: 1px -1px $background-gray, 1px 0 $background-gray, 0 -1px $background-gray; }*/
-}
-
-
-/* for translations  */
-
-/*.visited a::before:visited {
-  content: '- ';
-}*/
-
-.with-indent {
-  text-indent: 5%;
-}
-
 
 /* pagination */
 
 .pagination {
-  padding: ($base-unit) 10% ($base-unit * 2) 15%;
+  padding: ($base-unit) 10% ($base-unit) 15%;
   cursor: default;
   font-style: normal;
   line-height: 33px;
